[tool.poetry]
name = "batmon-ha"
version = "0.0.61"
description = "Monitor and control various battery management systems over Bluetooth"
authors = ["Fabian <gh@fabi.me>", "Will Rouesnel <wrouesnel@wrouesnel.com>"]
readme = "README.md"
packages = [
    { include = "batmon", from = "." },
]

[tool.poetry.scripts]
batmon = "batmon.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
backoff = "^2.2.1"
bleak = {git = "https://github.com/jpeters-ml/bleak", rev = "feature/windowsPairing"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
