[tool.poetry]
name = "batmon-ha"
version = "0.0.61"
description = "Monitor and control various battery management systems over Bluetooth"
authors = ["Fabian <gh@fabi.me>", "Will Rouesnel <wrouesnel@wrouesnel.com>"]
readme = "README.md"
packages = [
    { include = "batmon", from = "." },
]

[tool.poetry.scripts]
batmon = "batmon.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
backoff = "^2.2.1"
bleak = {git = "https://github.com/jpeters-ml/bleak", rev = "feature/windowsPairing"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | venv\..*
    | _build
    | buck-out
    | build
    | dist
    | setup\.py
    | \.ipynb
    | migrations
  )/
)

'''

[tool.isort]
profile = "black"
filter_files = true
py_version = 310
skip_gitignore = true
skip_glob = [ "*.ipynb" ]

[tool.flake8]
exclude = [
    '.vscode',
    '.idea',
    '.git',
    '__pycache__',
    'old',
    'build',
    'dist',
    'venv',
    '.venv',
    'stubs',
    'venv.*',
    'migrations'
]

max-line-length = 160
ignore = [
    'W503',
    'E722',
    'F403',
    'E501',
    'E231',
    'C812',
    'C819',
    'E203',
    'SC200',
    'U101',
    'R504',
    'VNE001',
    'D415',
    'D202',
    'D105',
    'W291',
    'W293',
    'F401'
]


[tool.mypy]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | venv\..*
    | _build
    | buck-out
    | build
    | dist
    | setup\.py
    | \.ipynb
    | migrations
  )/
)

'''

mypy_path = "stubs"
python_version = "3.10"

namespace_packages = true

disallow_any_unimported = false
disallow_any_expr = false

# Can't practically disable yet.
disallow_any_decorated = false

# Can't practically disable Any yet.
disallow_any_explicit = false

# Also can't practically disable Any in generics.
disallow_any_generics = false

# This winds up not being practical at the moment
disallow_subclassing_any = false

disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true

# Need to allow for click at this time
disallow_untyped_decorators = false

no_implicit_optional = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = true

strict_equality = true

# Important!
show_absolute_path = true

warn_unused_configs = true
